Bug 101475 - Format > Cells window unnaturally wide in v5.2 (Calc)
Summary: Format > Cells window unnaturally wide in v5.2 (Calc)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.2.0.0.beta2
Hardware: All All
: low trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.3
Keywords: bibisected, regression
: 101892 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-08-13 14:26 UTC by brucehohl
Modified: 2016-10-01 04:04 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Format cells in 5.3 (40.46 KB, image/jpeg)
2016-08-18 10:43 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description brucehohl 2016-08-13 14:26:22 UTC
The aspect ratio of the "Format Cells" window in version 5.1 (and earlier) was approximately 1.33:1 but in version 5.2 the aspect ratio is approximately 2:1 which is unnaturally wide (oversized) for the content as included and organized in this window.  The prior aspect ratio seems a better choice.
Comment 1 Buovjaga 2016-08-13 19:17:03 UTC
I confirmed, but I also notice that it in 5.3 it seems to be the 1.33:1 you mention.

So I guess we should check out v. 5.2.1 and see what the situation is.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.2.0.4
Build ID: 5.2.0-1
CPU Threads: 8; OS Version: Linux 4.6; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.0.0.alpha0+
Build ID: f2d09e621757fb5f394998afecba399b638f2428
CPU Threads: 8; OS Version: Linux 4.7; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on August 12th 2016
Comment 2 brucehohl 2016-08-17 21:37:54 UTC
For LO 5.2.1.1 the aspect ratio of 'Format Cells' remains about 2:1.  I have also noticed that in version 5.2.1.1 the 'Page Style' (Format > Page) window is similarly stretched.  In both cases the layout of the labels, controls, etc. in some tabs now has excessive (unnatural) left to right spacing.
Comment 3 Buovjaga 2016-08-18 10:43:40 UTC
Created attachment 126888 [details]
Format cells in 5.3

Here's how it looks like in 5.3
I confirm the width problem in 5.2.0 on Windows.

Win 7 Pro 64-bit Version: 5.3.0.0.alpha0+ (x64)
Build ID: f4d0818cd21f66b0d7f36f820fcf1b72e506e026
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2016-08-07_09:21:35
Locale: fi-FI (fi_FI); Calc: CL
Comment 4 brucehohl 2016-08-18 10:49:34 UTC
Looks good in 5.3.  Has 'Page Style' (Format > Page) also returned to its previous aspect ratio?
Comment 5 Buovjaga 2016-08-18 10:56:15 UTC
(In reply to brucehohl from comment #4)
> Looks good in 5.3.  Has 'Page Style' (Format > Page) also returned to its
> previous aspect ratio?

Yep :)

https://wiki.documentfoundation.org/Installing_in_parallel
http://dev-builds.libreoffice.org/daily/master/?C=M;O=A
Comment 6 Aron Budea 2016-08-22 01:59:34 UTC
I confirm this being wide in 5.2 (the earlier I checked with is 5.2 beta2), and normal sized in 5.3 master build.

Closing as WORKSFORME, since it's fixed in the current master build, adding backport request to 5.2, and bibisect request to find the commit that changed the aspect ratio of the dialog.
Comment 7 V Stuart Foote 2016-09-05 03:23:05 UTC
Not clear this is resolved, the Format -> Cells and Format -> Page for Calc are overly wide. Other module have correct widths.

Version: 5.3.0.0.alpha0+
Build ID: 696e83b663d4f3e00f23947613f9f3916a4dd14d
CPU Threads: 8; OS Version: Windows 6.19; UI Render: GL; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-09-03_10:21:32
Locale: en-US (en_US); Calc: CL
Comment 8 Aron Budea 2016-09-05 04:02:37 UTC
Hm, indeed, the size of those dialogs is a bit different, hardly noticeable for Cells, more noticeable for Page.
Comment 9 brucehohl 2016-09-05 12:05:55 UTC
In Format-Cells the "stretched" window size is most noticeable in the 'Cell Protection' tab where there is now a large gap between the check box controls on the left and the extended descriptions on the right.
Comment 10 Caolán McNamara 2016-09-27 20:21:17 UTC
Its from...

commit 2e512174f2116d86682037459fd5ab5164e9f510
Date:   Sun Nov 1 03:49:38 2015 +0530

    tdf#34449 : ability of deleting borders of a cell from adjacent cell

because the grid columns of cui/uiconfig/ui/borderpage.ui are homogeneous so they all take the widest width of any, and the new "Remove border from adjacent cells" string is quite wide
Comment 11 Commit Notification 2016-09-27 20:32:21 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b466bd9292de9755270b19153c41aed12e204761

Resolves: tdf#101475 adjacent cells text is still too wide

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Caolán McNamara 2016-09-27 20:33:32 UTC
This is related to bug #99963, perhaps for 5-2 we can just force the wrapping of that text to make it shorter without forcing the changing of translations.
Comment 13 Caolán McNamara 2016-09-28 07:54:47 UTC
https://gerrit.libreoffice.org/#/c/29346/ for 5-2 solution to wrap earlier in the string
Comment 14 Caolán McNamara 2016-09-28 07:57:04 UTC
*** Bug 101892 has been marked as a duplicate of this bug. ***
Comment 15 Commit Notification 2016-10-01 04:04:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4235b69dad089432911bb576d7e9412e55843ec6&h=libreoffice-5-2

Resolves: tdf#101475 adjacent cells text is still too wide

It will be available in 5.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.