Resolves: tdf#101475 adjacent cells text is still too wide

Change-Id: I8fae7197b191de4346a4fb0f2226c63bc615b29d